resume-site/k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-site-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: resume
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        name: resume
    spec:
      containers:
        - name: resume
          image: 879132841444.dkr.ecr.eu-north-1.amazonaws.com/parbtech-resume:IMAGE_TAG_PLACEHOLDER
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  type: ClusterIP
  selector:
    name: resume
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "resume.parbtechsolutions.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: resume-service
            port:
              number: 80
  tls:
  - hosts: 
    - resume.parbtechsolutions.com
    secretName: resume-tls
